k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helios-api
  labels:
    app: helios-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helios-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0   # never drop below desired capacity during a rollout
  template:
    metadata:
      labels:
        app: helios-api
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: helios-api
          image: ghcr.io/dograchaitanya20/helios-gitops/helios-api:latest # replaced by CI/Kustomize
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
